# flappy-bird-cpp

diagrams/mermaid/: activity.md  class.md  sequence.md
diagrams/uml/: Flappy-Bird.drawio
src/: Bird.cpp  Bird.h  CMakeLists.txt  Clock.h  Color.cpp  Color.h  Event.h  FileGameStorage.cpp  FileGameStorage.h  Game.cpp  Game.h  IGameStorage.h  IRenderer.h  Obstacle.cpp  Obstacle.h  SfmlRenderer.cpp  SfmlRenderer.h  Vector.h  main.cpp
